force-app/main/default/objects/leankor__CustomFields__c/leankor__CustomFields__c.object-meta.xml
<CustomObject>
    <label>CustomField</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>