force-app/main/default/objects/leankor__CustomFields__c/fields/leankor__AutomationTemplate__c.field-meta.xml
<CustomField>
    <fullName>leankor__AutomationTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automation Template</label>
    <referenceTo>leankor__AutomationTemplate__c</referenceTo>
    <relationshipLabel>CustomFields</relationshipLabel>
    <relationshipName>CustomFields</relationshipName>
    <type>Lookup</type>
</CustomField>