force-app/main/default/objects/leankor__CustomFields__c/fields/leankor__CustomFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>leankor__CustomFieldAPIName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Custom Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>