force-app/main/default/objects/leankor__CustomFields__c/fields/leankor__KanbanLabel__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kanban Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>