force-app/main/default/objects/leankor__CustomFields__c/fields/leankor__Type__c.field-meta.xml
<CustomField>
    <fullName>leankor__Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
                <default>true</default>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>